# api/swagger/swagger.json
@@ -14,9 +14,125 @@
     {
       "name": "Users",
       "description": "Everything about your users"
+    },
+    {
+      "name": "Application",
+      "description": "Application api's"
     }
   ],
   "paths": {
+    "/metrics": {
+      "x-controller": "metricController",
+      "get": {
+        "tags": ["Application"],
+        "summary": "Get application metrics",
+        "operationId": "getMetrics",
+        "description": "Get all application metrics",
+        "x-dont-log": false,
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "User information",
+            "content": {
+              "application/text": {
+                "schema": {
+                  "type": "string",
+                  "$ref": "#/components/schemas/Metrics"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/app/ready": {
+      "x-controller": "healthController",
+      "get": {
+        "tags": ["Application Health"],
+        "summary": "Get application ready",
+        "operationId": "getReady",
+        "description": "Get app ready status",
+        "x-dont-log": false,
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Get app ready status to serve the traffic",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "$ref": "#/components/schemas/Ready"
+                }
+              }
+            }
+          },
+          "503": {
+            "description": "App is not healthy",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "$ref": "#/components/schemas/Ready"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/app/live": {
+      "x-controller": "healthController",
+      "get": {
+        "tags": ["Application Health"],
+        "summary": "Get application live",
+        "operationId": "getLive",
+        "description": "Get app live status",
+        "x-dont-log": false,
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "live status",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Live"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/users": {
       "x-controller": "controller",
       "get": {
@@ -24,6 +140,7 @@
         "summary": "Get all users",
         "operationId": "getUsers",
         "description": "Get all users",
+        "x-dont-log": false,
         "parameters": [
           {
             "name": "$top",
@@ -47,6 +164,37 @@
               "maximum": 100,
               "minimum": 0,
               "default": 0
+            }
+          },
+          {
+            "name": "$filter",
+            "in": "query",
+            "description": "Filter records using sql like where clause. For all the available clause see readme. \n For the allowed filter fields check your queryHooks file",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "minLength": 1
+            }
+          },
+          {
+            "name": "$sortBy",
+            "in": "query",
+            "description": "This will sort documents by the database filed, default is no sort \n <br> Format is '+/-dbField'. '+' is for ascending and '-' is for descending order. <br> Ex '+age -name' will sort documents by age(ascending) and name(descending)",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "minLength": 1,
+              "maxLength": 30
+            }
+          },
+          {
+            "name": "$projection",
+            "in": "query",
+            "description": "Remove fields. Use '-' for removal. <br> EX: -name -age, will remove name and age ",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "minLength": 1
             }
           }
         ],
@@ -79,6 +227,7 @@
         "summary": "Create user",
         "description": "Create a user",
         "operationId": "createUser",
+        "x-dont-log": false,
         "requestBody": {
           "content": {
             "application/json": {
@@ -124,6 +273,19 @@
         "summary": "Delete user",
         "description": "Delete all users",
         "operationId": "deleteUsers",
+        "x-dont-log": false,
+        "parameters": [
+          {
+            "name": "$filter",
+            "in": "query",
+            "description": "Delete records using sql like where clause. For all the available clause see readme. \n For the allowed filter fields check your queryHooks file",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "minLength": 1
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "counts",
@@ -162,6 +324,7 @@
         "summary": "Get a user",
         "operationId": "getUser",
         "description": "Get a user by Id",
+        "x-dont-log": false,
         "parameters": [
           {
             "name": "id",
@@ -169,7 +332,9 @@
             "description": "Id of user",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "string",
+              "minLength": 1,
+              "maxLength": 12
             }
           }
         ],
@@ -202,6 +367,7 @@
         "summary": "Update user",
         "description": "Update a user",
         "operationId": "updateUser",
+        "x-dont-log": false,
         "parameters": [
           {
             "name": "id",
@@ -209,7 +375,9 @@
             "description": "Id of user",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "string",
+              "minLength": 1,
+              "maxLength": 12
             }
           }
         ],
@@ -257,6 +425,7 @@
         "summary": "Delete a user",
         "description": "Delete a users by Id",
         "operationId": "deleteUser",
+        "x-dont-log": false,
         "parameters": [
           {
             "name": "id",
@@ -264,7 +433,9 @@
             "description": "Id of user",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "string",
+              "minLength": 1,
+              "maxLength": 12
             }
           }
         ],
@@ -319,22 +490,29 @@
             "type": "string",
             "description": "user update timestamp"
           },
-          "version": {
-            "type": "integer",
-            "description": "user version"
+          "isActive": {
+            "type": "boolean",
+            "description": "user is active or not",
+            "example": false
+          },
+          "metadata": {
+            "type": "object",
+            "example": { "property1": 10 }
           }
         }
       },
       "Users": {
         "type": "object",
-        "required": ["count", "value"],
+        "required": ["count", "value", "links", "last", "previous", "next"],
         "properties": {
           "count": {
             "type": "integer",
+            "description": "total number of documents available for the query",
             "example": 10
           },
           "value": {
             "type": "array",
+            "description": "paginated data",
             "items": {
               "allOf": [
                 {
@@ -342,6 +520,54 @@
                 }
               ],
               "required": ["id", "name", "address", "age"]
+            }
+          },
+          "first": {
+            "type": "object",
+            "description": "pagination records first link",
+            "required": ["href"],
+            "properties": {
+              "href": {
+                "type": "string",
+                "description": "paginated data link",
+                "example": "http://localhost:3000/v1/users?$top=10&$skip=0"
+              }
+            }
+          },
+          "last": {
+            "type": "object",
+            "description": "pagination records last link",
+            "required": ["href"],
+            "properties": {
+              "href": {
+                "type": "string",
+                "description": "paginated data link",
+                "example": "http://localhost:3000/v1/users?$top=10&$skip=20"
+              }
+            }
+          },
+          "previous": {
+            "type": "object",
+            "description": "pagination records previous link",
+            "required": ["href"],
+            "properties": {
+              "href": {
+                "type": "string",
+                "description": "paginated data link",
+                "example": "http://localhost:3000/v1/users?$top=10&$skip=0"
+              }
+            }
+          },
+          "next": {
+            "type": "object",
+            "description": "pagination records next link",
+            "required": ["href"],
+            "properties": {
+              "href": {
+                "type": "string",
+                "description": "paginated data link",
+                "example": "http://localhost:3000/v1/users?$top=10&$skip=10"
+              }
             }
           }
         }
@@ -373,6 +599,65 @@
             "minimum": 0,
             "maximum": 150,
             "example": 30
+          },
+          "isActive": {
+            "type": "boolean",
+            "description": "user is active or not",
+            "example": false
+          },
+          "metadata": {
+            "type": "object",
+            "example": { "property1": 10 }
+          }
+        }
+      },
+      "Metrics": {
+        "type": "string",
+        "example": "# HELP userservice_process_cpu_user_seconds_total Total user CPU time spent in seconds. \n# TYPE userservice_process_cpu_user_seconds_total counter\n userservice_process_cpu_user_seconds_total{NODE_APP_INSTANCE='abcd'} 182.82899999999137"
+      },
+      "Ready": {
+        "type": "object",
+        "required": ["status", "components"],
+        "properties": {
+          "status": {
+            "type": "string",
+            "description": "App health status",
+            "example": "App is healthy"
+          },
+          "components": {
+            "type": "array",
+            "description": "Application Ready components",
+            "items": {
+              "allOf": [
+                {
+                  "$ref": "#/components/schemas/ReadyComponents"
+                }
+              ]
+            }
+          }
+        }
+      },
+      "ReadyComponents": {
+        "type": "object",
+        "required": ["status", "name"],
+        "properties": {
+          "status": {
+            "type": "string",
+            "example": "mongo-db working fine"
+          },
+          "name": {
+            "type": "string",
+            "example": "mongo-db database"
+          }
+        }
+      },
+      "Live": {
+        "type": "object",
+        "description": "Application live status",
+        "properties": {
+          "status": {
+            "type": "string",
+            "example": "ok"
           }
         }
       },
